--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDo List</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <div class="main">
-        <input type="text" placeholder="Enter The Task">
-        <input type="submit" id="submit">
-    </div>
-    <div id="tasks"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Todo App</title>
+  </head>
+  <body>
+    <div id="someDiv" class="header">
+      <input type="text" id="todo-input" placeholder="Enter the title" />
+      <button id="add-btn" class="addBtn">Add</button>
     </div>
 
+    <!-- <h1 id="no-notes-present"></h1>
+
+    <div id="some-div"></div> -->
+
+    <ul id="todo-list">
+      <li>Meet George</li>
+    </ul>
+
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
